fix squashed navbar logo on wider tenant logos

--- a/work-mgmt/src/main/resources/static/css/omny-1.0.0.css
+++ b/work-mgmt/src/main/resources/static/css/omny-1.0.0.css
@@ -465,6 +465,8 @@ h2 a.glyphicon:hover {
 .navbar-brand img,
 .brand-logo {
   max-height: 80px;
+}
+.brand-logo {
   max-width: 160px;
 }
 .navbar-top {
